# asymmetry

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.c  main.cpp  transition-table.h
